# artist-resolver-trackmanager

./: .flake8  .gitignore  README.md  devenv.nix  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: Tests.yml  auto-merge-dependabot.yaml  bump_version.yml
TrackManager/: TrackManager.py  __init__.py
artist_resolver/: TrackManager.py  __init__.py  trackManager.py  trackmanager.py
requirements/: common.txt  dev.txt
tests/: conftest.py  test_MbArtist.py  test_TrackManager.py  test_WebRequests.py  test_simple_artist.py
