[project]
name = "artist-resolver-trackmanager"
version = "2.0.331"
description = "Python library for the artist resolver api."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "httpx~=0.28.0",
    "mutagen~=1.47.0",
    "respx~=0.23.1",
]

[dependency-groups]
dev = [
    "pytest~=9.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-mock~=3.15.1",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
addopts = ["-q", "--color=yes", "--maxfail=1"]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools~=82.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["artist_resolver*"]