[project]
name = "artist-resolver-trackmanager"
version = "2.0.631"
description = "Python library for the artist resolver api."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "mmuffins" }]

dependencies = [
    "httpx~=0.28.0",
    "mutagen~=1.48.1",
    "respx~=0.23.1",
]

[dependency-groups]
dev = [
    "pytest~=9.1.1",
    "pytest-asyncio~=1.4.0",
    "pytest-mock~=3.15.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
addopts = ["-q", "--color=yes", "--maxfail=1"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools~=82.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["artist_resolver*"]

[project.urls]
repository = "https://egithub.com/mmuffins/artist-resolver-trackmanager"
